syntax = "proto3";

// ComponentDefinition.ComponentID= 1030;
// This parameter is processed by the tool

package decentraland.ecs;
option csharp_namespace = "DCL.ECSComponents";

message PBTextShape {
  string text = 1;
  bool visible = 2;
  string font = 3;
  float opacity = 4;
  float font_Size = 5;
  bool font_autoSize = 6;
  string h_text_align = 7;
  string v_text_align = 8;
  float width = 9;
  float height = 10;
  float padding_top = 11;
  float padding_right = 12;
  float padding_bottom = 13;
  float padding_left = 14;
  float line_spacing = 15;
  int32 line_count = 16;
  bool text_wrapping = 17;
  float shadow_blur = 18;
  float shadow_offsetX = 19;
  float shadow_offsetY = 20;
  float outline_width = 21;
  Color3 shadow_color = 22;
  Color3 outline_color = 23;
  Color3 text_color = 24;
}

message Color3 {
  float r = 1;
  float g = 2;
  float b = 3;
}
